--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -191,7 +191,7 @@ jobs:
       version: ${{ env.VERSION }}
 
   auto-merge:
-    needs: [create-pr, test-and-notify, sonar-analysis]
+    needs: [create-pr, test-and-notify, sonar-analysis, post-dockerhub-label, post-sonar-label]
     runs-on: ubuntu-latest
     if: needs.test-and-notify.outputs.test_status == 'success'
     permissions:
