--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -219,6 +219,9 @@ jobs:
     outputs:
       task_branch: ${{ steps.set-task.outputs.task_branch }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Create GitHub Issue for Task
         id: create_issue
         uses: actions/github-script@v6
@@ -233,6 +236,7 @@ jobs:
             });
             console.log("Issue created: #" + issue.data.number);
             return issue.data.number;
+
       - name: Create Branch for Task
         id: set-task
         run: |
@@ -241,7 +245,7 @@ jobs:
           git checkout -b $TASK_BRANCH
           git push origin $TASK_BRANCH
           echo "task_branch=$TASK_BRANCH" >> $GITHUB_OUTPUT
-
+          
   ## 8. Уведомление о тестах, сборка email и Telegram уведомлений, добавление лейблов для версии
   test-notify:
     needs: [create-pr, frontend-tests, backend-tests, antivirus-tests, sonar-analysis, versioning, create-task]
@@ -538,34 +542,37 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+  
       - name: Send Final Telegram Report
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          # Основное сообщение с дополнительными ссылками
-          MESSAGE="GITHUB_DEVOPS_BOT%0AНовый выпуск изменений%0AПроект: land_devops%0AВерсия: ${{ needs.test-notify.outputs.version }}%0AДата: $(date '+%Y.%m.%d %H:%M:%S')%0AАвтор: ${{ github.actor }}%0AИнформация о Git-репозитории%0AGIT MR: ${{ needs.create-pr.outputs.pr_number }}%0AGIT TAG: ${{ needs.test-notify.outputs.version }}%0AИнформация о Docker-репозитории%0AВладелец: makarmarkov%0AНазвание: land_devops%0AТег: ${{ needs.test-notify.outputs.version }}%0AПолное имя: makarmarkov/land_devops:v${{ needs.test-notify.outputs.version }}%0A%0AСсылка на Докер Хаб: https://hub.docker.com/r/${{ secrets.DOCKER_HUB_USERNAME }}/messenger-backend%0AСсылка на пайплайн: ${{ github.run_url }}"
-          
-          # Отправка основного сообщения как текст
+          # Формирование отчёта с динамическими данными:
+          REPORT="GITHUB_DEVOPS_BOT%0AНовый выпуск изменений%0AПроект: land_devops%0AВерсия: ${{ needs.test-notify.outputs.version }}%0AДата: $(date '+%Y.%m.%d %H:%M:%S')%0AАвтор: ${{ github.actor }}%0AИнформация о Git-репозитории%0AGIT MR: ${{ needs.create-pr.outputs.pr_number }}%0AGIT TAG: ${{ needs.test-notify.outputs.version }}%0AИнформация о Docker-репозитории%0AВладелец: makarmarkov%0AНазвание: land_devops%0AТег: ${{ needs.test-notify.outputs.version }}%0AПолное имя: makarmarkov/land_devops:v${{ needs.test-notify.outputs.version }}"
+          echo "$REPORT"
           curl -s -X POST \
             https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id=${TELEGRAM_CHAT_ID} \
-            -d text="$MESSAGE" \
-            -d parse_mode="HTML" || echo "Failed to send base report"
-          
-          # Отправка changelog.md как файл
+            -d text="$REPORT" \
+            -d parse_mode="HTML" || echo "Не удалось отправить основной отчёт"
+  
+      - name: Send Changelog File (if exists)
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
           if [ -f changelog.md ]; then
             curl -s -X POST \
               https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendDocument \
               -F chat_id=${TELEGRAM_CHAT_ID} \
               -F document=@changelog.md \
               -F caption="GITHUB_DEVOPS_BOT%0AChangelog для версии ${{ needs.test-notify.outputs.version }}" \
-              -F parse_mode="HTML" || echo "Failed to send changelog file"
+              -F parse_mode="HTML" || echo "Не удалось отправить файл changelog"
           else
             curl -s -X POST \
               https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
               -d chat_id=${TELEGRAM_CHAT_ID} \
               -d text="GITHUB_DEVOPS_BOT%0AChangelog not found" \
-              -d parse_mode="HTML" || echo "Failed to send changelog not found message"
+              -d parse_mode="HTML" || echo "Не удалось отправить сообщение об отсутствии changelog"
         shell: bash
